--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   },
   "keywords": [],
   "author": {
-    "name": "Frederick Roegiers",
+    "name": "Sacha Gazeau",
     "email": "frederick.roegiers@arteveldehs.be"
   },
   "license": "ISC",
   "dependencies": {
+    "3": "^2.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-ejs-layouts": "^2.5.1"    
+    "express-ejs-layouts": "^2.5.1",
+    "knex": "^3.1.0",
+    "objection": "^3.1.5",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
